# endless_launcher

./: Cargo.toml  LICENSE.md  build.rs
plugins/: manifest.json  plugins.json
src/: main.rs  manifest.rs  plugins.rs
ui/: app.slint  globals.slint  palette.slint
ui/components/: iconbutton.slint  instance.slint  plugin.slint
ui/pages/: instances.slint  plugins.slint
