[package]
name = "endless_launcher"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
directories = "5.0.1"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
slint = "1.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
slint-build = "1.3.0"
